--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -34,6 +34,9 @@ python-socketio==5.12.0
 python-dateutil==2.9.0
 requests==2.32.3
 
+# Production Server
+gunicorn==23.0.0
+
 # Development
 pytest==8.3.4
 pytest-cov==6.0.0
