Complete Phase 2: Payment, Email, and File Upload Integration
Major features added:
- Stripe payment integration (payment intents, webhooks, refunds)
- SendGrid email service with beautiful HTML templates
- File upload service (local storage + S3 support)
- Payment routes (create, confirm, refund, webhook)
- Upload routes (KYC documents, profile images, tenant logos)
- Email automation (verification, password reset, welcome, purchase confirmation)

Services implemented:
- PaymentService: Full Stripe integration with webhook handling
- EmailService: Professional email templates for all user interactions
- FileService: Secure file upload with validation and S3 support

Documentation:
- SETUP_GUIDE.md: Complete setup instructions for SendGrid and Stripe
- API_DOCUMENTATION.md: Full API reference with examples

Configuration:
- Updated .env.example with all required variables
- Added user email (Bengab1113@gmail.com) as default sender
- Frontend URL configuration for email links

Phase 2 is now complete! The backend has:
✅ Authentication (JWT + 2FA)
✅ Payment processing (Stripe)
✅ Email notifications (SendGrid)
✅ File uploads (KYC, profiles, logos)
✅ Multi-tenant support
✅ Complete API documentation

Next: Phase 3 - Frontend Development

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,7 +20,7 @@ STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
 # SendGrid
 SENDGRID_API_KEY=SG.your_sendgrid_api_key
-SENDGRID_FROM_EMAIL=noreply@proptradepro.com
+SENDGRID_FROM_EMAIL=Bengab1113@gmail.com
 
 # MetaTrader (optional)
 MT_SERVER=your_mt_server
@@ -29,4 +29,7 @@ MT_PASSWORD=your_mt_password
 
 # File Upload
 UPLOAD_FOLDER=/tmp/uploads
+
+# Frontend URL (for email links)
+FRONTEND_URL=http://localhost:3000
 
