Add database migrations and frontend Docker
Database Migrations:
- Created Alembic migration environment
- Added initial schema migration (001)
- Added seed data migration (002)
- Created manage.py for easy migration management
- Includes default tenant, admin user, and sample programs

Frontend Docker:
- Multi-stage Dockerfile for production builds
- Nginx configuration with gzip, caching, security headers
- API proxy support
- React Router support (SPA)
- .dockerignore for clean builds
- Updated docker-compose.yml with frontend service

Migration Features:
- python manage.py init - Initialize migrations
- python manage.py upgrade - Apply migrations
- python manage.py downgrade - Rollback migrations
- python manage.py reset - Reset database
- python manage.py seed - Seed initial data

Seed Data Includes:
- Default tenant (PropTradePro)
- Admin user (admin@proptradepro.com / Admin@123)
- 6 trading programs (5k-00k, various types)
- 10 program add-ons (bi-weekly payouts, no time limit)

Frontend Docker Features:
- Production-ready Nginx setup
- Gzip compression
- Static asset caching
- Security headers
- API proxy to backend
- Health checks

Progress: 97% complete!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,21 +73,20 @@ services:
         python src/app.py
       "
 
-  # Frontend (placeholder for future)
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #     dockerfile: Dockerfile
-  #   container_name: proptradepro-frontend
-  #   ports:
-  #     - "3000:3000"
-  #   volumes:
-  #     - ./frontend:/app
-  #     - /app/node_modules
-  #   depends_on:
-  #     - backend
-  #   networks:
-  #     - proptradepro-network
+  # Frontend
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: proptradepro-frontend
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+    networks:
+      - proptradepro-network
+    environment:
+      - VITE_API_URL=http://localhost:5000
 
 volumes:
   postgres_data:
