Initial commit - PropTradePro complete system

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name _ 146.190.21.113 marketedgepros.com www.marketedgepros.com;
     root /usr/share/nginx/html;
     index index.html;
 
