--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_URL=http://localhost:5000/api/v1
+VITE_API_URL=http://146.190.21.113:5000/api/v1
 
 # Stripe Configuration
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
