--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -24,7 +24,7 @@ server {
 
     # API proxy (if needed)
     location /api {
-        proxy_pass http://146.190.21.113:5000;
+        proxy_pass http://proptradepro-backend:5000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
