--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,28 +1,38 @@
 server {
     listen 80;
-    server_name _ 146.190.21.113 marketedgepros.com www.marketedgepros.com;
+    server_name marketedgepros.com www.marketedgepros.com;
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name marketedgepros.com www.marketedgepros.com;
+    
+    ssl_certificate /etc/letsencrypt/live/marketedgepros.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/marketedgepros.com/privkey.pem;
+    
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    
     root /usr/share/nginx/html;
     index index.html;
 
-    # Gzip compression
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json application/javascript;
 
-    # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
 
-    # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # API proxy (if needed)
     location /api {
         proxy_pass http://proptradepro-backend:5000;
         proxy_http_version 1.1;
@@ -35,12 +45,10 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # React Router - serve index.html for all routes
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Error pages
     error_page 404 /index.html;
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
