Use environment variables for database connection

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 FLASK_ENV=production
 FLASK_APP=src.app:create_app
 
-# Database Configuration
-DATABASE_URL=postgresql://proptrading:PropTrade2025!Secure#@postgres:5432/proptrading
+# Database Configuration (Use your managed database)
+DATABASE_URL=postgresql://username:password@your-db-host:port/database?sslmode=require
 
 # Redis Configuration
 REDIS_URL=redis://redis:6379/0
