--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -33,8 +33,8 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    location /api {
-        proxy_pass http://proptradepro-backend:5000;
+    location /api/ {
+        proxy_pass http://proptradepro-backend:5000/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
