--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       REDIS_URL: redis://redis:6379/0
       SECRET_KEY: dev-secret-key-change-in-production
       JWT_SECRET_KEY: dev-jwt-secret-key-change-in-production
-      CORS_ORIGINS: http://localhost:3000,http://localhost:5173
+      CORS_ORIGINS: ${CORS_ORIGINS:-https://marketedgepros.com,https://www.marketedgepros.com,http://localhost:3000}
     ports:
       - "5000:5000"
     volumes:
